--- a/App/pom.xml
+++ b/App/pom.xml
@@ -5,9 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.1</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<!-- make war file deploying -->
+	<packaging>jar</packaging>
+	<!-- make war file deploying-->
 	<groupId>com.cuongsolution</groupId>
 	<artifactId>manageproperty.front.web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -78,7 +81,7 @@
          	<groupId>jakarta.persistence</groupId>
         	 <artifactId>jakarta.persistence-api</artifactId>
      	 </dependency>
-     	 <dependency>
+     	 <dependency><!-- warning import this u cant deploy as war file -->
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
